# npm-follower

./: .env  .example.secret.env  .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  current_tables.txt  notes.md  npm-follower.crontab
.old-stuff/original-scraper/: Cargo.toml  db_job.bash
.old-stuff/original-scraper/src/: inserter.rs  main.rs  packument.rs  sql_data.rs  sql_insertable.rs  version.rs
.old-stuff/rust-scraper/: Cargo.toml
.old-stuff/rust-scraper/src/: changes.rs  inserter.rs  main.rs  packument.rs  sql_data.rs  sqlite_handler.rs  update_handler.rs
blob_idx_client/: Cargo.toml  run.sh
blob_idx_client/src/: lib.rs  main.rs
blob_idx_server/: Cargo.toml  export_redis.sh  worker.sh
blob_idx_server/chunk_script_example/: chunk  chunk_read.sh  chunk_write.sh  write_all_files.sh
blob_idx_server/chunk_script_example/files/: test1  test2  test3  test4
blob_idx_server/chunk_script_example/offsets/: abi  arch  gop
blob_idx_server/src/: blob.rs  errors.rs  http.rs  job.rs  lib.rs  main.rs  ssh.rs  tests.rs
blob_idx_server/src/job/: pool.rs  worker.rs
changes_fetcher/: Cargo.toml  garbage_collect_script.sh
changes_fetcher/src/: main.rs
cluster_compute_jobs/size_analysis/size_analysis_client/: Cargo.toml  Makefile
diff_analysis/: Cargo.toml
diff_analysis/diff_analysis_client/: Cargo.toml  npm_tarball_diff.sh
diff_analysis/diff_analysis_client/src/: main.rs
diff_analysis/src/: main.rs
diff_queries/: Cargo.toml
diff_queries/src/: main.rs  relational_db_accessor.rs
download_metrics/: Cargo.toml
download_metrics/src/: api.rs  lib.rs  main.rs
downloader/: Cargo.toml  continuous_script.sh
downloader/src/: download_db.rs  download_error.rs  download_threadpool.rs  lib.rs  main.rs  main_clusterdl.rs
ghsa_scraper/: Cargo.toml
ghsa_scraper/src/: main.rs  query.graphql
historic_npm_registry/: Cargo.toml  empty-package.tar
historic_npm_registry/src/: main.rs
historic_solver_job/: .env  .gitignore  Cargo.toml  greg-test.sh  launch.sh  slurm.sh
historic_solver_job/sql_scripts/: fill_job_input.sql
historic_solver_job/src/: main.rs  run_solve_job.rs
historic_solver_job_server/: Cargo.toml  create_job_tables.sql  fill_job_input.sql  job_input_gc.sql  job_input_kill_zombies.sql  requeue_missing_results.sql  reset_jobs.sql
historic_solver_job_server/src/: lib.rs  main.rs
metrics_logging/: Cargo.toml
metrics_logging/src/: csv_logger.rs  influx_db_logger.rs  lib.rs  null_logger.rs
postgres_db/: Cargo.toml  diesel.toml  diesel_tarball_analysis.toml
postgres_db/migrations/2022-05-02-185320_create_changes/: down.sql  up.sql
postgres_db/migrations/2022-05-11-234825_create_download_tasks/: down.sql  up.sql
postgres_db/migrations/2022-05-11-234930_create_internal_state/: down.sql  up.sql
postgres_db/migrations/2022-06-08-155423_create_completed_downloads/: down.sql  up.sql
postgres_db/migrations/2022-06-08-160638_create_diff_log/: down.sql  up.sql
postgres_db/migrations/2022-06-08-160638_create_relational_db/: down.sql  up.sql
postgres_db/migrations/2022-10-05-205027_create_dlmetrics/: down.sql  up.sql
postgres_db/migrations/2022-11-08-193252_create_relational_db/: down.sql  up.sql
postgres_db/migrations/2022-11-09-161317_add_change_received_timestamps/: down.sql  up.sql
postgres_db/migrations/2022-12-23-152753_create_ghsa/: down.sql  up.sql
postgres_db/migrations/2023-01-01-200006_diff_analysis/: down.sql  up.sql
postgres_db/migrations/2023-05-03-122641_create_analysis_schemas/: down.sql  up.sql
postgres_db/migrations/2023-05-03-122715_create_table_tarball_analysis_diff_analysis/: up.sql
postgres_db/src/: change_log.rs  connection.rs  custom_types.rs  dependencies.rs  diff_analysis.rs  download_metrics.rs  download_queue.rs  download_tarball.rs  ghsa.rs  internal_state.rs  lib.rs  packages.rs  packument.rs  schema.patch  schema.rs  serde_non_string_key_serialization.rs  testing.rs  versions.rs
postgres_db/src/connection/: async_pool.rs  mod.rs  sync.rs
postgres_db/src/custom_types/: diff_log.rs  download_count.rs  download_failed.rs  helpers.rs  mod.rs  package_metadata.rs  parsed_spec.rs  parsing.rs  repo_info.rs  repository.rs  semver.rs  version_comparator.rs  version_constraint.rs
postgres_db/src/diff_log/: mod.rs
postgres_db/src/diff_log/internal_diff_log_state/: manager.rs  mod.rs  sql.rs
postgres_db/src/schema/: mod.rs  schema_public.patch  schema_public.rs  schema_tarball_analysis.rs
postgres_db/src/testing/: mod.rs
relational_db_builder/: Cargo.toml  angular-noconflict.txt  build.rs  fs.txt  grab_bench_many_changes.sh  grab_seq_testcase.sh  sample_updates.txt  sampmodule.txt  small-sm.txt  tappr-web-sdk.txt  trin-glob.txt
relational_db_builder/benches/: insertion.rs  serialization.rs  test_change_small.json
relational_db_builder/resources/test_changes/: seq_1.json  seq_1166950.json  seq_1783991.json  seq_2548915.json
relational_db_builder/resources/test_changes/correct/: seq_1.ron  seq_10004931.ron  seq_10321916.ron  seq_10361556.ron  seq_10921138.ron  seq_11382421.ron  seq_11600387.ron  seq_1166950.ron  seq_11810754.ron  seq_12532887.ron  seq_12902000.ron  seq_13123480.ron  (+37 more)
relational_db_builder/samples/: angieslist-visitor-app-common.txt  dsr-package-public-dormy-noops-grout-firns.txt  sample_deletes.txt  stack-component.txt  zidane.txt
relational_db_builder/src/: lib.rs  main.rs  old.rs  relational_db_accessor.rs
relational_db_builder/src/packument/: deserialize.rs  deserialize_repo.rs  mod.rs  parsing.rs
relational_db_builder/tests/: deserialize_seq_test.rs.template  integration_tests.rs
rust_sql_analysis/: Cargo.toml  log
rust_sql_analysis/src/: lib.rs  relational_db_accessor.rs
semver_spec_serialization/: Cargo.toml  build.rs
semver_spec_serialization/benches/: serialization.rs
semver_spec_serialization/js_parser/: index.js  package-lock.json  package.json
semver_spec_serialization/src/: lib.rs  main.rs
semver_spec_serialization/tests/: parse_semver.rs  parse_spec.rs
tarball_transfer/: Cargo.toml
tarball_transfer/src/: main.rs
(+372 files in other folders)
