[workspace]
members = [
    "changes_fetcher", 
    "postgres_db", 
    "download_queuer", 
    "downloader", 
    "diff_log_builder", 
    "relational_db_builder", 
    "semver_spec_serialization", 
    "utils", 
    "metrics_logging", 
    "blob_idx_server", 
    "blob_idx_client", 
    "tarball_transfer", 
    "ghsa_scraper", 
    "analysis",
    "historic_npm_registry",
    "diff_analysis",
    "diff_analysis/diff_analysis_client",
]

[profile.bench]
debug = true
