[workspace]
members = [
    "changes_fetcher", 
    "postgres_db", 
    "download_queuer", 
    "downloader", 
    "diff_log_builder", 
    "relational_db_builder", 
    "semver_spec_serialization", 
    "utils", 
    "metrics_logging", 
    "blob_idx_server", 
    "blob_idx_client", 
    "tarball_transfer", 
    "ghsa_scraper", 
    "analysis",
    "cluster_compute_jobs/historic_solver_job/historic_npm_registry",
    "cluster_compute_jobs/historic_solver_job",
    "cluster_compute_jobs/diff_analysis",
    "cluster_compute_jobs/diff_analysis/diff_analysis_client",
    "cluster_compute_jobs/size_analysis",
    "cluster_compute_jobs/size_analysis/size_analysis_client",
    "analysis/rust",
    "database_exporting",
    "download_metrics"
]

[profile.bench]
debug = true
