[package]
name = "blob_idx_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.12"
serde = "1.0.147"
serde_json = "1.0.87"
tokio = { version = "1", features = ["full"] }
blob_idx_server = { path = "../blob_idx_server" }
dotenvy = "0.15.6"
