[package]
name = "changes_fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres_db = { path = "../postgres_db" }
utils = { path = "../utils" }

changes-stream2 = "*"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["preserve_order"] }
futures-util = "0.3.21"
reqwest = { version = "0.11.10", features = ["json"] }
indicatif = "0.16.2"

