[package]
name = "diff_queries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.147"
serde_json = "1.0.87"
dotenvy = "0.15.6"
diesel = { version = "2.0", features = ["postgres", "serde_json", "chrono"] }

postgres_db = { path = "../postgres_db" }
utils = { path = "../utils" }
chrono = "0.4.23"
