[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres_db = { path = "../postgres_db" }
utils = { path = "../utils" }
reqwest = "0.11.11"
futures = "0.3"
tokio = { version = "1.19.2", features = ["full"] }
