[package]
name = "ghsa_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "*"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1", features = ["full"] }
redis = "0.21.6"
graphql_client = "0.11.0"

postgres_db = { path = "../postgres_db" }
utils = { path = "../utils" }
thiserror = "1.0.38"
chrono = "0.4.23"
