[package]
name = "historic_solver_job_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "historic_solver_job_server"
path = "src/lib.rs"

[[bin]]
name = "historic_solver_job_server"
path = "src/main.rs"

[dependencies]

tokio = { version = "1", features = ["full"] }
warp = "0.3.3"
chrono = { version = "0.4.19" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["preserve_order"] }
reqwest = { version = "0.11.13", features = ["json"] }
futures-util = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
postgres_db = { path = "../postgres_db" }
diesel = { version = "2.0", features = ["postgres", "serde_json", "chrono"] }
moka = { version = "0.9", features = ["future"] }
