[package]
name = "metrics_logging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
influxdb2 = "0.3"
influxdb2-structmap = "0.2"
num-traits = "0.2"
dotenv = "0.15.0"
async-trait = "0.1.58"
chrono = "0.4"
csv = "1.1.6"
serde = { version = "1.0.136", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
