[package]
name = "relational_db_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres_db = { path = "../postgres_db" }
utils = { path = "../utils" }

serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["preserve_order"] }
indicatif = "0.16.2"

