[package]
name = "rust_sql_analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_sql_analysis"
doctest = true

[dependencies]
serde = "1.0.147"
serde_json = "1.0.87"
dotenvy = "0.15.6"
diesel = { version = "2.0", features = ["postgres", "serde_json", "chrono"] }
chrono = "0.4.23"

lru = { git = "https://github.com/donald-pinckney/lru-rs" }
postgres_db = { path = "../postgres_db" }
utils = { path = "../utils" }
historic_solver_job = { path = "../cluster_compute_jobs/historic_solver_job" }
semver_spec_serialization = { path = "../semver_spec_serialization" }


