[package]
name = "tarball_transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
serde = "1.0.147"
serde_json = "1.0.87"
tokio = { version = "1", features = ["full"] }

dotenvy = "0.15.6"
base64 = "0.13.1"
postgres_db = { path = "../postgres_db" }
utils = { path = "../utils" }
