[package]
name = "npm_db_builder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.67", features = ["preserve_order"] }
rusqlite = { version = "0.26.0", features = ["chrono", "serde_json"] }
chrono = "0.4.19"
regex = "1"
lazy_static = "1.4.0"
indicatif = "0.16.2"