[package]
name = "rust-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
changes-stream2 = "*"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["preserve_order"] }
futures-util = "0.3.21"

rusqlite = { version = "0.27.0", features = ["chrono", "serde_json"] }
chrono = "0.4.19"
regex = "1"
lazy_static = "1.4.0"
indicatif = "0.16.2"