[package]
name = "size_analysis_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.147"
serde_json = "1.0.87"
tokio = { version = "1", features = ["full"] }
size_analysis = { path = "../../size_analysis" }

postgres_db = { path = "../../../postgres_db" }
